hphp/hack/test/decl/case_types_basic.php.typecheck.exp
File "case_types_basic.php", line 4, characters 11-13:
Invalid case type declaration. More than one variant of `CT1` could contain values with the same runtime tag (Typing[4475])
  File "case_types_basic.php", line 4, characters 66-82:
  This is the type `(function(T2): T)`, which includes **keysets** because a function could be any value at runtime
  File "case_types_basic.php", line 4, characters 53-62:
  It overlaps with `keyset<T1>`, which also includes **keysets**
